# swbt-python

./: .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.agents/skills/agentic-sdd/: SKILL.md
.agents/skills/agentic-self-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: agent-brief.md  api.md  hardware-test-log.md  hardware.md  index.md  release-notes.md  usage.md
examples/: hardware_bringup.py  pairing_probe.py  tap_a.py
spec/: dev-journal.md  hardware-test-log.md  publishing.md
spec/initial/: README.md  api.md  architecture.md  lifecycle.md  naming.md  protocol.md  risks.md  roadmap.md  testing.md  transport-bumble.md
spec/rearchitecture/: 01-design-change-overview.md  02-as-is-to-be.md  03-public-api-config-profile.md  04-runtime-profile-transport-details.md  05-milestones-implementation.md  README.md  mkdocs-nav-snippet.yml
src/swbt/: __init__.py  _experimental_direct_send_timing.py  _gamepad_connection.py  _gamepad_output.py  adapter_discovery.py  diagnostics.py  errors.py  gamepad.py  imu.py  input.py  probe.py  report_loop.py  state_store.py
tests/: conftest.py
tests/hardware/: README.md  test_battery_status.py  test_bumble_transport.py  test_close_disconnect.py  test_context_manager_resource_scope.py  test_controller_colors.py  test_exp_local_profile.py  test_input_operations.py  test_joycon_profile.py  test_multi_address_reconnect.py  test_pairing_l2cap.py  test_pairing_profile.py  test_reconnect_keystore.py
tests/integration/: test_examples.py  test_exp_local_profile.py  test_pairing_profile.py  test_switch_gamepad_fake_transport.py
tests/unit/: test_adapter_discovery.py  test_adapter_identity.py  test_bumble_acl.py  test_bumble_hidp.py  test_bumble_key_store_metadata.py  test_bumble_lifecycle.py  test_bumble_sdp.py  test_bumble_transport.py  test_ci_workflow.py  test_csr_bd_addr_experiment.py  test_csr_bd_addr_harness.py  test_csr_bd_addr_switch_pair_probe.py  test_diagnostics.py  test_docs_workflow.py  test_exp_local_address.py  test_exp_local_identity.py  test_exp_local_profile_runtime.py  test_gamepad_connection_workflow.py  test_gamepad_output_dispatcher.py  test_gamepad_transport_factory.py  test_hardware_test_log_docs.py  test_imu_report.py  test_input_report.py  test_input_state.py  test_mkdocs_site.py  test_output_report.py  test_package_import.py  test_package_metadata.py  test_pairing_profile.py  test_pairing_profile_runtime.py  test_probe_cli.py  test_protocol_boundary.py  test_protocol_profile.py  test_protocol_session.py  test_public_api_boundary.py  test_public_api_docstrings.py  test_public_docs.py  test_publish_workflow.py  test_readme_docs.py  test_release_gate_docs.py  (+5 more)
tmp/: wording-cleanup.md
tools/: csr_bd_addr_plan.py  csr_bd_addr_probe.py  csr_bd_addr_switch_pair_probe.py  csr_bd_addr_volatile_probe.py  csr_bd_addr_warm_reset_probe.py
(+177 files in other folders)
